# tantra-kazan

./: .env  .env.dev  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
tantrakazan/: .env  .env.dev  .gitignore  111.sqlite3  Dockerfile  db.sqlite3  entrypoint.sh  manage.py  requirements.txt
tantrakazan/accounts/: forms.py  urls.py  utils.py  views.py
tantrakazan/app/: .gitignore
tantrakazan/app/accounts/: apps.py  forms.py  utils.py  views.py
tantrakazan/app/articles/: admin.py  forms.py  models.py  urls.py
tantrakazan/app/config/: settings.py  urls.py
tantrakazan/app/feedback/: models.py
tantrakazan/app/gallery/: models.py  views.py
tantrakazan/app/listings/: forms.py  models.py
tantrakazan/app/specialists/: forms.py  utils.py  validators.py  views.py
tantrakazan/articles/: admin.py  models.py  views.py
tantrakazan/config/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tantrakazan/feedback/: admin.py  forms.py  managers.py  models.py  urls.py  views.py  widgets.py
tantrakazan/gallery/: admin.py  forms.py  mangers.py  models.py  photo_processor.py  urls.py  views.py
tantrakazan/listings/: admin.py  forms.py  models.py  urls.py  views.py
tantrakazan/main/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
tantrakazan/specialists/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
tantrakazan/tantrakazan/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tantrakazan/users/: admin.py  apps.py  forms.py  managers.py  models.py  photo_processor.py  urls.py  views.py
(+444 files in other folders)
