[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["zai <artziga77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
geopy = "^2.4.1"
django-ckeditor = "^6.7.0"
django-formtools = "^2.4.1"
django-imagekit = "^5.0.0"
django-multiupload = "^0.6.1"
django-star-ratings = "^0.9.2"
django-taggit = "^5.0.1"
python-dotenv = "^1.0.0"
django-autocomplete-light = "^3.9.7"
django-cors-headers = "^4.3.1"
django-autoslug = "^1.9.9"
pytils = "^0.4.1"
dlib = "^19.24.2"
opencv-python = "^4.8.1.78"
unidecode = "^1.3.7"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
